# controller/admin.go
@@ -3,9 +3,11 @@ package controller
 import (
 	"encoding/json"
 	"fmt"
+	"github.com/e421083458/golang_common/lib"
 	_ "github.com/e421083458/golang_common/lib"
 	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"go_gateway/dao"
 	_ "go_gateway/dao"
 	"go_gateway/dto"
 	"go_gateway/middleware"
@@ -64,48 +66,48 @@ func (adminlogin *AdminController) AdminInfo(c *gin.Context) {
 // @Param body body dto.ChangePwdInput true "body"
 // @Success 200 {object} middleware.Response{data=string} "success"
 // @Router /admin/change_pwd [post]
-//func (adminlogin *AdminController) ChangePwd(c *gin.Context) {
-//	params := &dto.ChangePwdInput{}
-//	if err := params.BindValidParam(c); err != nil {
-//		middleware.ResponseError(c, 2000, err)
-//		return
-//	}
-//
-//	//1. session读取用户信息到结构体 sessInfo
-//	//2. sessInfo.ID 读取数据库信息 adminInfo
-//	//3. params.password+adminInfo.salt sha256 saltPassword
-//	//4. saltPassword==> adminInfo.password 执行数据保存
-//
-//	//session读取用户信息到结构体
-//	sess := sessions.Default(c)
-//	sessInfo := sess.Get(public.AdminSessionInfoKey)
-//	adminSessionInfo := &dto.AdminSessionInfo{}
-//	if err := json.Unmarshal([]byte(fmt.Sprint(sessInfo)), adminSessionInfo); err != nil {
-//		middleware.ResponseError(c, 2000, err)
-//		return
-//	}
-//
-//	//从数据库中读取 adminInfo
-//	tx, err := lib.GetGormPool("default")
-//	if err != nil {
-//		middleware.ResponseError(c, 2001, err)
-//		return
-//	}
-//	adminInfo := &dao.Admin{}
-//	adminInfo, err = adminInfo.Find(c, tx, (&dao.Admin{UserName: adminSessionInfo.UserName}))
-//	if err != nil {
-//		middleware.ResponseError(c, 2002, err)
-//		return
-//	}
-//
-//	//生成新密码 saltPassword
-//	saltPassword := public.GenSaltPassword(adminInfo.Salt, params.Password)
-//	adminInfo.Password = saltPassword
-//
-//	//执行数据保存
-//	if err := adminInfo.Save(c, tx); err != nil {
-//		middleware.ResponseError(c, 2003, err)
-//		return
-//	}
-//	middleware.ResponseSuccess(c, "")
-//}
+func (adminlogin *AdminController) ChangePwd(c *gin.Context) {
+	params := &dto.ChangePwdInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	//1. session读取用户信息到结构体 sessInfo
+	//2. sessInfo.ID 读取数据库信息 adminInfo
+	//3. params.password+adminInfo.salt sha256 saltPassword
+	//4. saltPassword==> adminInfo.password 执行数据保存
+
+	//session读取用户信息到结构体
+	sess := sessions.Default(c)
+	sessInfo := sess.Get(public.AdminSessionInfoKey)
+	adminSessionInfo := &dto.AdminSessionInfo{}
+	if err := json.Unmarshal([]byte(fmt.Sprint(sessInfo)), adminSessionInfo); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	//从数据库中读取 adminInfo
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	adminInfo := &dao.Admin{}
+	adminInfo, err = adminInfo.Find(c, tx, (&dao.Admin{UserName: adminSessionInfo.UserName}))
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	//生成新密码 saltPassword
+	saltPassword := public.GenSaltPassword(adminInfo.Salt, params.Password)
+	adminInfo.Password = saltPassword
+
+	//执行数据保存
+	if err := adminInfo.Save(c, tx); err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	middleware.ResponseSuccess(c, "")
+}
